[package]
name = "cavey"
version = "0.1.0"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
edition = "2018"

[dependencies]
structopt = "0.2"
failure = "0.1"
serde = "1.0"
bincode = "1.1"
serde_json = "1.0"
log = "0.4"
env_logger = "0.6"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
